Wikitext legend. Europe view.

--- a/wiki_styles/wiki.css
+++ b/wiki_styles/wiki.css
@@ -1,3 +1,8 @@
+.legendchunk {
+    display: inline-block;
+    min-width: 10em;
+}
+
 div.thumb {
   width: auto;
   background-color: transparent;
